--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
+{%extends "layout.html"%}
+{%block content%}
+<div class="about">
 
     <h1>My About Page</h1>    
     <p>This is a about page of my website</p>
-</body>
+</div>
 
-</html>
+{%endblock%}
