--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
+{%extends "layout.html"%}
+{%block content%}
+<div class="home">
 
     <h1>My homepage</h1>    
     <p>This is a test website</p>
-</body>
 
-</html>
+</div>
+{%endblock%}
